apps/clubs/preci/wordpress/prod/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: wordpress
  namespace: preci
spec:
  virtualhost:
    fqdn: preci.etsmtl.ca
    tls:
      secretName: tls-preci
  routes:
    - conditions:
        - prefix: /
      services:
        - name: preci-wordpress
          port: 80
      requestHeadersPolicy:
        set:
          - name: X-Forwarded-Proto
            value: https
